--- a/JMB_APK/index.html
+++ b/JMB_APK/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Download APK</title>
   <style>
     body {
@@ -17,7 +18,7 @@
       flex-direction: column;
     }
 
-    .container {
+    .container-cs {
       background-color: white;
       padding: 40px;
       border-radius: 10px;
@@ -64,12 +65,21 @@
 </head>
 <body>
   <div class="container">
-    <h1>Download APK</h1>
-    <p>Click the button below to download the APK file:</p>
-    <a href="./public/jmb.apk" class="button" download>Download APK</a>
-    <div class="footer">
-      <p>© 2024 LiveTypingTest</p>
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <div class="container-cs">
+          <h1>Download APK</h1>
+          <p>Click the button below to download the APK file:</p>
+          <a href="./public/jmb.apk" class="button" download>Download APK</a>
+          <div class="footer">
+            <p>© 2024 JMB Enterprises</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
